# Programming-at-University

./: README.md
Advanced C Programming/: README.md
Computer Graphics/CG 3/src/: BSPNode.h  BSPTree.h  BoundingBox.h  CMakeCache.txt  CMakeLists.txt  CameraPerspective.h  ICamera.h  IShader.h  LightArea.h  Prim.h  PrimPlane.h  PrimSphere.h  PrimTriangle.h  Scene.cpp  Scene.h  ShaderEyelight.h  ShaderPhong.h  main  main.cpp  ray.h  types.h  types.h.in
Operating Systems/HW4/: CMakeLists.txt  Makefile  cat++.c  cmake_install.cmake
Software Engineering/Sprint1/: CMakeLists.txt  README.md  config-file  references.txt  tests.cpp
Software Engineering/Sprint1/doc/html/: Factory_8h_source.html  Game_8h_source.html  Instructor_8h_source.html  Order_8h_source.html  Player_8h_source.html  annotated.html  classFactory-members.html  classFactory.html  classGame-members.html  classGame.html  classInstructor-members.html  classInstructor.html  classLoginForm-members.html  classLoginForm.html  classLoginForm__coll__graph.dot  classLoginForm__coll__graph.md5  classLoginForm__inherit__graph.dot  classLoginForm__inherit__graph.md5  classMainWindow-members.html  classMainWindow.html  classOrder-members.html  classOrder.html  classPlayer-members.html  classPlayer.html  classRole-members.html  classRole.html  classRole__coll__graph.dot  classRole__coll__graph.md5  classRole__inherit__graph.dot  classRole__inherit__graph.md5  classes.html  classrolePlayer-members.html  classrolePlayer.html  classrolePlayer__coll__graph.dot  classrolePlayer__coll__graph.md5  classrolePlayer__inherit__graph.dot  classrolePlayer__inherit__graph.md5  dir_11bc0974ce736ce9a6fadebbeb7a8314.html  dir_495b6943bf75bbfa93a87f798854d846.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  (+35 more)
Software Engineering/Sprint1/doc/latex/: annotated.tex  classFactory.tex  classGame.tex  classInstructor.tex  classLoginForm.tex  classLoginForm__coll__graph.dot  classLoginForm__coll__graph.md5  classLoginForm__inherit__graph.dot  classLoginForm__inherit__graph.md5  classMainWindow.tex  classOrder.tex  classPlayer.tex  classRole.tex  classRole__coll__graph.dot  classRole__coll__graph.md5  classRole__inherit__graph.dot  classRole__inherit__graph.md5  classrolePlayer.tex  classrolePlayer__coll__graph.dot  classrolePlayer__coll__graph.md5  classrolePlayer__inherit__graph.dot  classrolePlayer__inherit__graph.md5  dir_495b6943bf75bbfa93a87f798854d846.tex  files.tex  group__Game.tex  group__Player.dot  group__Player.md5  group__Player.tex  group__group1.dot  group__group1.md5  group__group1.tex  group__group2.tex  hierarchy.tex  index.tex  modules.tex  refman.tex  tests_8cpp.tex  tests_8cpp.tex.tmp  tests_8cpp__incl.dot  tests_8cpp__incl.md5
Software Engineering/Sprint1/gui/Beer-Game/: CMakeLists.txt  loginform.cpp  loginform.h  loginform.ui  main.cpp  mainwindow.cpp  mainwindow.ui  role.cpp  role.h  role.ui  roleplayer.cpp  roleplayer.h  roleplayer.ui
Software Engineering/Sprint1/src/: Factory.cpp  Factory.h  Game.cpp  Game.h  Instructor.cpp  Instructor.h  Order.cpp  Order.h  Player.cpp  Player.h  main.cpp
Software Engineering/Sprint2/: CMakeLists.txt  Doxyfile  README.md  gitignore  references.json
Software Engineering/Sprint2/src/: game.cpp  game.h  instructor.cpp  instructor.h  main.cpp  order.cpp  order.h  player.cpp  player.h  playerEvent.cpp  playerEvent.h  shipment.cpp  shipment.h
Software Engineering/Sprint2/src/gui/: BeerGame.pro  BeerGame.pro.user.2710bf4.4.8-pre1  BeerGame.pro.user.7b4380c  BeerGame.pro.user.fd83462  create_game.cpp  create_game.h  create_game.ui  factory.cpp  factory.h  factory.ui  game.cpp  game.h  game.ui  info_sharing.cpp  info_sharing.h  info_sharing.ui  instructor.cpp  instructor.h  instructor.ui  instructors_dashboard.cpp  instructors_dashboard.h  instructors_dashboard.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  order.cpp  order.h  player.cpp  player.h  player.ui  player_password.cpp  player_password.h  player_password.ui  players_playing.cpp  players_playing.h  players_playing.ui  print_passwords.cpp  print_passwords.h  print_passwords.ui  (+1 more)
Software Engineering/Sprint2/test/: tests-mainfunctionality-v2.cpp
Software Engineering/Sprint3/: CMakeLists.txt  Doxyfile  README.md  References.txt  mainpage.txt
Software Engineering/Sprint3/src/: Game.cpp  Game.h  Instructor.cpp  Instructor.h  Order.cpp  Order.h  Player.cpp  Player.h  PlayerEvent.cpp  PlayerEvent.h  Shipment.cpp  Shipment.h  tests.cpp
Software Engineering/Sprint3/src/beerGame/: beerGame.pro  create_game.cpp  create_game.h  create_game.ui  game.ui  instructorLogin.cpp  instructorLogin.h  instructorLogin.ui  instructorscreen.cpp  instructorscreen.h  instructorscreen.ui  instructorwelcome.cpp  instructorwelcome.h  instructorwelcome.ui  loginscreen.cpp  loginscreen.h  loginscreen.ui  main.cpp  maindialog.cpp  maindialog.h  maindialog.ui  playerScreen.cpp  playerScreen.h  playerScreen.ui  playerlogin.cpp  playerlogin.h  playerlogin.ui  res.qrc.depends
Software Engineering/Sprint3/src/build-beerGame-Desktop_Qt_5_14_1_GCC_64bit-Debug/: Makefile  moc_game.cpp  moc_instructorLogin.cpp  moc_instructorscreen.cpp  moc_instructorwelcome.cpp  moc_loginscreen.cpp  moc_maindialog.cpp  moc_playerScreen.cpp  moc_playerlogin.cpp  qrc_res.cpp  ui_game.h  ui_instructorLogin.h  ui_instructorscreen.h  ui_instructorwelcome.h  ui_loginscreen.h  ui_maindialog.h  ui_playerScreen.h  ui_playerlogin.h
Software Engineering/Sprint4/: CMakeLists.txt  Doxyfile  README.md  mainpage.txt  references.txt
Software Engineering/Sprint4/src/: .pro  CMakeLists.txt  beer-game.pro  beerGame.sql
Software Engineering/Sprint4/src/backend/: game.cpp  game.h  instructor.cpp  instructor.h  main.cpp  order.cpp  order.h  player.cpp  player.h  playerevent.cpp  playerevent.h  shipment.cpp  shipment.h
Software Engineering/Sprint4/src/frontend/: instructordialog.cpp  instructordialog.h  instructordialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  playerdialog.cpp  playerdialog.h  playerdialog.ui  resource.qrc
Software Engineering/Sprint4/tests/: CMakeLists.txt  tests.cpp
(+344 files in other folders)
